--- a/src/app/UI/feed-home/feed-home.component.scss
+++ b/src/app/UI/feed-home/feed-home.component.scss
@@ -41,6 +41,8 @@
   
   .wrapper {
     border-bottom: 1px solid var(--ion-color-light);
+    background: white;
+    margin-bottom: 15px;
   }
   
   .highlight {
