--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,20 +4,10 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col size="3"></ion-col>
-      <ion-col style="background-color: white" size="6">
+      <ion-col style="background-color: white; height:120px" size="6">
         <app-alta-publicacion></app-alta-publicacion>
       </ion-col>
       <ion-col size="3">
-        <div>
-          GRUPO 1
-        </div>
-        <div style="padding-top: 10px;">
-          GRUPO 2
-        </div>
-        <div style="padding-top: 10px;">
-          GRUPO 3
-        </div>
-        <br>
         <ion-row>
           <ion-col size-sm="8">
             <ion-label>Sugerencias</ion-label>
@@ -36,7 +26,7 @@
   </ion-grid>
   <ion-grid fixed>
     <ion-row>
-      <ion-col offset-md="3" sizeMd="5" sizeSm="12">
+      <ion-col style="min-width: 50%;" offset-md="3" sizeMd="5" sizeSm="12">
         <app-feed-home></app-feed-home>
       </ion-col>
     </ion-row>
