--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -11,73 +11,75 @@
 <app-navbar *ngIf="!creando && !editando"></app-navbar>
 
 
-<ion-content *ngIf="creando || editando">
+<ion-content  *ngIf="creando || editando">
   <ion-grid class="main-grid">
-    <ion-row>
-      <ion-col size="4" size-md="2" size-xs="12">
-        <ion-label>Nombre</ion-label>
-      </ion-col>
-      <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
-        <ion-input type="text" [(ngModel)]="evento.nombre" placeholder="Ej: Recorrido por la ciudad"></ion-input>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4" size-md="2" size-xs="12">
-        <ion-label>Descripción</ion-label>
-      </ion-col>
-      <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
-        <ion-textarea rows="4" [(ngModel)]="evento.descripcion" placeholder="Descripción">
-        </ion-textarea>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4" size-md="2" size-xs="12">
-        <ion-label>Imagen</ion-label>
-      </ion-col>
-      <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
-        <label for="fileInput" class="label-input cursor"><ion-icon name="camera-outline" slot="icon-only"></ion-icon></label>
-        <img [src]="imageSource" style="width: 100%; min-height: 100px;" *ngIf="evento.imagen">
-          <input type="file" id="fileInput" (change)="uploadFile($event)" class="ion-hide" accept="image/*"/>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4" size-md="2" size-xs="12">
-        <ion-label>Ubicación</ion-label>
-      </ion-col>
-      <ion-col id="mapa" size="8" size-md="5" size-lg="3" size-xs="12">
-        <app-mapa [currentLocation]="true" [ubiCentral]="ubicacion" [marcarUbicacion]="true" [draggable]="true" [buscador]="true" (ubicacion)="marcarUbicacion($event)"></app-mapa>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4" size-md="2" size-xs="12">
-        <ion-label>Inicio</ion-label>
-      </ion-col>
-      <ion-col class="datepicker" size="7" size-md="3" size-lg="2" size-xs="10">
-        <ion-datetime #pickerInicio [min]="inicio" [(ngModel)]="inicio" (ionChange)="setMinFin($event)">
-        </ion-datetime>
-      </ion-col>
-      <ion-col class="datepicker-icon" size="1" size-md="1" size-lg="1" size-xs="2">
-        <ion-icon name="calendar-outline" size="large" (click)="pickerInicio.open()"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="4" size-md="2" size-xs="12">
-        <ion-label>Fin</ion-label>
-      </ion-col>
-      <ion-col class="datepicker" size="7" size-md="3" size-lg="2" size-xs="10">
-        <ion-datetime #pickerFin [min]="inicio" [(ngModel)]="fin">
-        </ion-datetime>
-      </ion-col>
-      <ion-col class="datepicker-icon" size="1" size-md="1" size-lg="1" size-xs="2">
-        <ion-icon name="calendar-outline" size="large" (click)="pickerFin.open()"></ion-icon>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="2"></ion-col>
-      <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
-        <ion-button expand="block" color="primary" [disabled]="!isValid()" (click)="submit()">Aceptar</ion-button>
-      </ion-col>
-    </ion-row>
+    <ion-card style="background:white">
+      <ion-row>
+        <ion-col size="4" size-md="2" size-xs="12">
+          <ion-label>Nombre</ion-label>
+        </ion-col>
+        <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
+          <ion-input type="text" [(ngModel)]="evento.nombre" placeholder="Ej: Recorrido por la ciudad"></ion-input>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="4" size-md="2" size-xs="12">
+          <ion-label>Descripción</ion-label>
+        </ion-col>
+        <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
+          <ion-textarea rows="4" [(ngModel)]="evento.descripcion" placeholder="Descripción">
+          </ion-textarea>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="4" size-md="2" size-xs="12">
+          <ion-label>Imagen</ion-label>
+        </ion-col>
+        <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
+          <label for="fileInput" class="label-input cursor"><ion-icon name="camera-outline" slot="icon-only"></ion-icon></label>
+          <img [src]="imageSource" style="width: 100%; min-height: 100px;" *ngIf="evento.imagen">
+            <input type="file" id="fileInput" (change)="uploadFile($event)" class="ion-hide" accept="image/*"/>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="4" size-md="2" size-xs="12">
+          <ion-label>Ubicación</ion-label>
+        </ion-col>
+        <ion-col id="mapa" size="8" size-md="5" size-lg="3" size-xs="12">
+          <app-mapa [currentLocation]="true" [ubiCentral]="ubicacion" [marcarUbicacion]="true" [draggable]="true" [buscador]="true" (ubicacion)="marcarUbicacion($event)"></app-mapa>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="4" size-md="2" size-xs="12">
+          <ion-label>Inicio</ion-label>
+        </ion-col>
+        <ion-col class="datepicker" size="7" size-md="3" size-lg="2" size-xs="10">
+          <ion-datetime #pickerInicio [min]="inicio" [(ngModel)]="inicio" (ionChange)="setMinFin($event)">
+          </ion-datetime>
+        </ion-col>
+        <ion-col class="datepicker-icon" size="1" size-md="1" size-lg="1" size-xs="2">
+          <ion-icon name="calendar-outline" size="large" (click)="pickerInicio.open()"></ion-icon>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="4" size-md="2" size-xs="12">
+          <ion-label>Fin</ion-label>
+        </ion-col>
+        <ion-col class="datepicker" size="7" size-md="3" size-lg="2" size-xs="10">
+          <ion-datetime #pickerFin [min]="inicio" [(ngModel)]="fin">
+          </ion-datetime>
+        </ion-col>
+        <ion-col class="datepicker-icon" size="1" size-md="1" size-lg="1" size-xs="2">
+          <ion-icon name="calendar-outline" size="large" (click)="pickerFin.open()"></ion-icon>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size="2"></ion-col>
+        <ion-col size="8" size-md="5" size-lg="3" size-xs="12">
+          <ion-button expand="block" color="primary" [disabled]="!isValid()" (click)="submit()">Aceptar</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card>
   </ion-grid>
 </ion-content>
 
