--- a/src/app/eventos/eventos.page.html
+++ b/src/app/eventos/eventos.page.html
@@ -1,17 +1,19 @@
 <app-navbar></app-navbar>
 <ion-content>
-  <h1 (click)="prueba()">Mis eventos</h1>
-  <ion-item>
-    <ion-icon slot="end" name="add-outline" class="pointer" [routerLink]="['/evento/alta']"></ion-icon>
-  </ion-item>
-
-  <ion-list #listaEventos>
-    <ion-item *ngFor="let evento of bsEventos.value">
-      <img [src]="evento.imagen" class="thumbnail" *ngIf="evento.imagen" (click)="ver(evento)">
-      <p (click)="ver(evento)" class="fullwidth">{{ evento.nombre }}</p>
-      <ion-icon slot="end" name="create-outline" class="pointer" (click)="editar(evento)"></ion-icon>
-      <ion-icon slot="end" *ngIf="evento.owner" name="trash-outline" (click)="eliminarAlert(evento, true)" class="pointer"></ion-icon>
-      <ion-icon slot="end" *ngIf="!evento.owner" name="exit-outline" (click)="eliminarAlert(evento, false)" class="pointer"></ion-icon>
+  <ion-card style="background:white">
+    <h1 (click)="prueba()">Mis eventos</h1>
+    <ion-item>
+      <ion-icon slot="end" name="add-outline" class="pointer" [routerLink]="['/evento/alta']"></ion-icon>
     </ion-item>
-  </ion-list>
+
+    <ion-list #listaEventos>
+      <ion-item *ngFor="let evento of bsEventos.value">
+        <img [src]="evento.imagen" class="thumbnail" *ngIf="evento.imagen" (click)="ver(evento)">
+        <p (click)="ver(evento)" class="fullwidth">{{ evento.nombre }}</p>
+        <ion-icon slot="end" name="create-outline" class="pointer" (click)="editar(evento)"></ion-icon>
+        <ion-icon slot="end" *ngIf="evento.owner" name="trash-outline" (click)="eliminarAlert(evento, true)" class="pointer"></ion-icon>
+        <ion-icon slot="end" *ngIf="!evento.owner" name="exit-outline" (click)="eliminarAlert(evento, false)" class="pointer"></ion-icon>
+      </ion-item>
+    </ion-list>
+  </ion-card>
 </ion-content>
