todo comentarios y reacciones de publicacion hecho

--- a/src/app/UI/feed/feed.component.html
+++ b/src/app/UI/feed/feed.component.html
@@ -48,7 +48,7 @@
         </ion-col>
         <ion-col>
           <ion-button fill="clear" color="medium" size="small">
-            <ion-icon name="chatbubble-outline" slot="start"></ion-icon>
+            <ion-icon routerLink="/comentarios-publicacion/{{publicacion.idPublicacion}}" name="chatbubble-outline" slot="start"></ion-icon>
             12
           </ion-button>
         </ion-col>
