--- a/src/app/UI/feed/feed.component.html
+++ b/src/app/UI/feed/feed.component.html
@@ -9,7 +9,7 @@
           <tr>
           <td style="width:8%">
             <ion-avatar class="user-avatar">
-              <ion-img size="2" src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"></ion-img>          
+              <ion-img size="2" [src]="usuario.value.imagenPerfil"></ion-img>          
             </ion-avatar>     
           </td>
           <td>
