--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -34,7 +34,11 @@
         </ion-row>
       </ion-grid>
     </ion-card>
-
+<ion-buttons>
+  <ion-button fill="solid" color="primary" routerLink="/visualizar-ubicaciones/{{perfil?.usuario.idPersona}}">
+    Vizualizar Mis Ubicaciones
+  </ion-button>
+</ion-buttons>
     <div class="publicaciones">
       <ion-grid class="grid" fixed>
         <ion-row>
