Comentario reacciones feed home

--- a/src/app/UI/feed-home/feed-home.component.html
+++ b/src/app/UI/feed-home/feed-home.component.html
@@ -30,13 +30,13 @@
         <ion-col>
           <ion-button fill="clear" size="small">
             <ion-icon name="thumbs-up-outline" slot="start"></ion-icon>
-            {{publicacion.cantidadLikes}}
+            <!-- {{publicacion.cantidadLikes}} -->
           </ion-button>
         </ion-col>
         <ion-col>
           <ion-button fill="clear" size="small">
             <ion-icon name="thumbs-down-outline" slot="start"></ion-icon>
-            {{publicacion.cantidadDislikes}}
+            <!-- {{publicacion.cantidadDislikes}} -->
           </ion-button>
         </ion-col>
         <ion-col>
