--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,6 +47,12 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
+          <ion-item lines="none" routerLink="./chat">
+            <ion-icon name="chatbubble-ellipses-outline" slot="start"></ion-icon>
+            <ion-label>Mis Chats</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
           <ion-item lines="none" (click)="onLogout()" button>
             <ion-icon name="exit" slot="start"></ion-icon>
             <ion-label>Cerrar sesión</ion-label>
