--- a/src/app/alta-evento/alta-evento.page.html
+++ b/src/app/alta-evento/alta-evento.page.html
@@ -139,7 +139,7 @@
       <ion-col *ngIf="participantes.value && participantes.value.length > 0">
         <ion-item class="lstParticipantes pointer" *ngFor="let invitado of participantes.value" >
           <img [src]="invitado.imagenPerfil" class="thumbnail ml-2" /> {{ invitado.nombre }} {{ invitado.apellido }}
-          <ion-icon name="person-remove-outline" button (click)="removerIntegrante(invitado)"></ion-icon>
+          <ion-icon name="person-remove-outline" *ngIf="editando || creando" button (click)="removerIntegrante(invitado)"></ion-icon>
         </ion-item>
       </ion-col>
     </ion-row>
