--- a/src/app/UI/alta-publicacion/alta-publicacion.component.scss
+++ b/src/app/UI/alta-publicacion/alta-publicacion.component.scss
@@ -6,8 +6,10 @@ ion-avatar{
 }
 #mapa-mapbox{
     width: 100%;
-    height: 100%;
+    // height: 100%;
     //margin: 10px;
+    // max-width: 22rem;
+    // max-height: 15rem;
     overflow: hidden;
   }
 
