--- a/src/app/UI/buscar-mapa/buscar-mapa.component.scss
+++ b/src/app/UI/buscar-mapa/buscar-mapa.component.scss
@@ -1,7 +1,7 @@
 #mapa-mapbox{
     width: 100%;
     height: 100%;
-    margin: 10px;
+    //margin: 10px;
     overflow: hidden;
   }
   .mapboxgl-canvas-mapa-mapbox {
