--- a/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
+++ b/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
@@ -11,7 +11,7 @@
           <ion-item-sliding *ngFor="let usuario of usuarios" #slidingUser>
             <ion-item>
               <ion-avatar style="padding-right: 7px;">
-                <ion-img [src]="usuario.imgUrl"></ion-img>
+                <ion-img [src]="usuario.imagenPerfil"></ion-img>
               </ion-avatar>
               <ion-label>
                 <h5>{{usuario.nickname}}</h5>
