--- a/src/app/UI/medalla/medalla.component.html
+++ b/src/app/UI/medalla/medalla.component.html
@@ -3,5 +3,5 @@
     <ion-img class="imagen"
         [src]="medallaUrl"></ion-img>
     <h5>Puntos: {{puntosActuales}}/{{puntosTotales}}</h5>
-    <ion-progress-bar [value]="progreso"></ion-progress-bar>
+    <ion-progress-bar type="determinate" [value]="progreso"></ion-progress-bar>
 </div>
