--- a/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
+++ b/src/app/UI/sugerir-amigos/sugerir-amigos.page.html
@@ -6,11 +6,11 @@
       <ion-col size-md="8" offset-md="2">
         <ion-card style="background-color:white">
           <ion-card-header color=tertiary>
-            <ion-card-title  class="ion-text-center">Personas que quizas le interecen</ion-card-title>
+            <ion-card-title  class="ion-text-center">Personas que quizas te interesen</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-item-divider>
-              <ion-label>
+              <ion-label class="header">
                 Lista de usuarios:
               </ion-label>
             </ion-item-divider>
