--- a/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
+++ b/src/app/comentarios-publicacion/comentarios-publicacion.page.scss
@@ -4,3 +4,31 @@
     margin-left: 0px;
     position:relative;
   }
+
+  .card-text{
+    background: white;
+    min-width: 100%;
+    position:relative;
+    margin: 15px;
+    margin-left: 0;
+    margin-bottom: 0px;
+  }
+
+  .inner-text{
+    margin:20px;
+    display:block;    
+  }
+
+  .texto{
+    font-family: Georgia;
+    font-size: 16px;
+    color: #212221;
+  }
+
+  .header{
+    
+  }
+
+  .reacciones{
+    margin-top:0;
+  }
