--- a/src/app/eventos/eventos.page.html
+++ b/src/app/eventos/eventos.page.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <ion-content>
   <ion-card style="background:white">
-    <h1 (click)="prueba()">Mis eventos</h1>
+    <h1 class="header">Mis eventos</h1>
     <ion-item>
       <ion-icon slot="end" name="add-outline" class="pointer" [routerLink]="['/evento/alta']"></ion-icon>
     </ion-item>
