--- a/src/app/eventos/eventos.page.scss
+++ b/src/app/eventos/eventos.page.scss
@@ -8,6 +8,14 @@ h1 {
   margin-right: 1em;
 }
 
+.fullwidth{
+  margin-left: 20px;
+}
+
+.header{
+  font-family: 'big_noodle_titling';  
+  color:#212211;
+}
 
 ion-item::part(native) {
   //WRITE ALL YOUR CSS RULES HERE
