--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -13,6 +13,16 @@
   line-height: 26px;
 }
 
+.sugerencias-header{
+  font-family: 'big_noodle_titling';
+  font-size: 25px;
+  color:#212211;
+}
+.publicacion-wrap{
+  border: 1px solid #022833;
+   border-radius: 4px;
+}
+
 #container p {
   font-size: 16px;
   line-height: 22px;
