--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,7 +10,7 @@
             <div class="test">
               <ion-card style="max-width: 550px; flex-grow: 1; margin-top: 200px; background-color:white">
                 <ion-card-content>
-                  <ion-card-title>Travel Pack</ion-card-title>
+                  <ion-card-title style="font-family: 'big_noodle_titling'; font-size:25px;">TravelPack</ion-card-title>
                   <ion-list class="form-input">
                     <ion-item>
                       <ion-label position="floating" >Correo</ion-label>
