--- a/src/app/UI/feed-home/feed-home.component.html
+++ b/src/app/UI/feed-home/feed-home.component.html
@@ -15,7 +15,7 @@
       </ion-row>
       <ion-row>
         <ion-col size="12">
-          <div *ngIf="publicacion.tipo.tipo === 'texto'">
+          <div class="contenido-publicacion" *ngIf="publicacion.tipo.tipo === 'texto'">
             <ion-label>{{ publicacion.contenido }}</ion-label>
           </div>
           <div *ngIf="publicacion.tipo.tipo === 'foto'">
