--- a/src/app/UI/sugerir-amigos/sugerir-amigos.page.scss
+++ b/src/app/UI/sugerir-amigos/sugerir-amigos.page.scss
@@ -6,3 +6,8 @@
   min-height: 5px !important;
   height:0px !important;
 }
+.header{
+  font-family: 'big_noodle_titling';  
+  color:#212211;
+  font-size: 25px;
+}
