--- a/src/app/alta-evento/alta-evento.page.scss
+++ b/src/app/alta-evento/alta-evento.page.scss
@@ -13,6 +13,13 @@ ion-input::placeholder {
   font-style: italic;
 }
 
+.text-header{
+  font-family: 'big_noodle_titling';
+  font-size: 25px;
+  color:#212211;
+  margin-left: 8px;
+}
+
 ion-col.datepicker {
   padding-right: 0;
 
