--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-header>
       <ion-toolbar>
         <ion-title class="ion-text-center">
-          Travelpack
+          TravelPack
         </ion-title>
       </ion-toolbar>
     </ion-header>
