--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,17 +4,17 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col size="3"></ion-col>
-      <ion-col style="background-color: white;" size="6">
+      <ion-col class="publicacion-wrap" style="background-color: white;" sizeSm="6" size="12" >
         <app-alta-publicacion></app-alta-publicacion>
       </ion-col>
-      <ion-col size="3">
+      <ion-col sizeSm="3" size="12" >
         <ion-card style="background:white">
           <ion-row>
 
             <ion-col size-sm="8">
-              <ion-label>Sugerencias</ion-label>
+              <ion-label class="sugerencias-header">Sugerencias</ion-label>
             </ion-col>
-            <ion-col>
+            <ion-col style="margin-top: 6px;">
               <ion-label class="underline" [routerLink]="['/sugerir-amigos']">Ver todas</ion-label>
             </ion-col>
           </ion-row>
