--- a/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
+++ b/src/app/UI/configuracion-notificaciones/configuracion-notificaciones.page.html
@@ -5,7 +5,7 @@
       <ion-col size-sm="6" size-xs="12" >
         <ion-card style="background: white">
           <ion-card-header color=tertiary style="background:#022833">
-            <ion-card-title  class="ion-text-center">Configuracion de Notificaciones por Email</ion-card-title>
+            <ion-card-title  class="ion-text-center header">Configuración de Notificaciones por Email</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-list *ngFor="let config of configuracionAMostrar | keyvalue">
@@ -23,7 +23,7 @@
       <ion-col size-sm="6" size-xs="12" >
         <ion-card style="background: white">
           <ion-card-header color=tertiary style="background:#022833">
-            <ion-card-title  class="ion-text-center">Configuracion de Notificaciones Mobile</ion-card-title>
+            <ion-card-title  class="ion-text-center header">Configuración de Notificaciones Mobile</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-list *ngFor="let config of configuracionAMostrar | keyvalue">
