--- a/src/app/UI/solicitudes-pendientes/solicitudes-pendientes.page.html
+++ b/src/app/UI/solicitudes-pendientes/solicitudes-pendientes.page.html
@@ -5,7 +5,7 @@
     <ion-col size-sm="6" offset-sm="3">
       <ion-card style="background: white">
         <ion-card-header color=tertiary style="background:#022833">
-          <ion-card-title  class="ion-text-center">Solicitudes Pendientes</ion-card-title>
+          <ion-card-title  class="ion-text-center header">Solicitudes Pendientes</ion-card-title>
         </ion-card-header>
         <ion-card-content>
           <div >
