--- a/src/app/galeria/galeria.page.scss
+++ b/src/app/galeria/galeria.page.scss
@@ -2,3 +2,15 @@
 {
 
 }
+
+.header{
+    font-family: "big_noodle_titling";
+    font-size: 25px;
+    text-align: center; 
+    flex-grow: 1; 
+    flex-direction: row; 
+    margin-top: 0px; 
+    vertical-align: middle; 
+    display: inline-block; 
+    line-height: normal;
+}
