--- a/src/app/listar-contactos/listar-contactos.page.html
+++ b/src/app/listar-contactos/listar-contactos.page.html
@@ -5,7 +5,7 @@
       <ion-col size-md="8" size-xs="12"  offset-md="2">
         <ion-card style="background-color:white">
           <ion-card-header color=tertiary style="background:#022833">
-            <ion-card-title  class="ion-text-center">Contactos</ion-card-title>
+            <ion-card-title  class="ion-text-center header">Contactos</ion-card-title>
           </ion-card-header>
           <ion-card-content>
             <ion-searchbar autocomplete="on" [formControl]="searchBar" placeholder="Buscar contactos" showCancelButton="never" cancelButtonText="Custom Cancel"></ion-searchbar>
