arreglo en admin page y intereses

--- a/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
+++ b/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
@@ -3,7 +3,7 @@
     <ion-row>
       <ion-col size-md="6" offset-md="3">
         <div style="display: flex; justify-content: flex-end; flex-direction: row;">
-          <ion-button color="primary" fill="outline" routerLink="./alta-administrador">
+          <ion-button color="primary" fill="outline" [routerLink]="['/admin-page/tabRegistrarAdministrador']">
             <ion-label>Registrar administrador</ion-label>
           </ion-button>
         </div>
