--- a/src/app/admin-page/admin-page.page.html
+++ b/src/app/admin-page/admin-page.page.html
@@ -26,6 +26,11 @@
         <ion-icon name="person-outline"></ion-icon>
         <ion-label>Mi cuenta</ion-label>
       </ion-tab-button>
+
+      <ion-tab-button tab="tabRegistrarAdministrador">
+        <ion-icon name="person-add-outline"></ion-icon>
+        <ion-label>Registrar Administrador</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
 </ion-content>
