--- a/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
+++ b/src/app/tab-gestion-usuarios/tab-gestion-usuarios.page.html
@@ -2,35 +2,38 @@
   <ion-grid>
     <ion-row>
       <ion-col size-md="6" offset-md="3">
-        <div style="display: flex; justify-content: flex-end; flex-direction: row;">
-          <ion-button color="primary" fill="outline" [routerLink]="['/admin-page/tabRegistrarAdministrador']">
-            <ion-label>Registrar administrador</ion-label>
-          </ion-button>
-        </div>
-        <ion-list>
-          <ion-item-sliding *ngFor="let usuario of usuarios" #slidingUser>
-            <ion-item>
-              <ion-avatar style="padding-right: 7px;">
-                <ion-img [src]="usuario.imagenPerfil"></ion-img>
-              </ion-avatar>
-              <ion-label>
-                <h5>{{usuario.nickname}}</h5>
-                <p>{{usuario.email}}</p>
-              </ion-label>
-            </ion-item>
-            <ion-item-options [hidden]="usuario.bloqueado">
-              <ion-item-option color="danger" (click)="onBloquearUsuario(usuario.idPersona, slidingUser)">
-                <ion-icon name="lock-closed-sharp" slot="icon-only"></ion-icon>
-              </ion-item-option>
-            </ion-item-options>
-            <ion-item-options [hidden]="!usuario.bloqueado">
-              <ion-item-option color="green" (click)="onDesbloquearUsuario(usuario.idPersona, slidingUser)">
-                <ion-icon name="lock-open-sharp" slot="icon-only"></ion-icon>
-              </ion-item-option>
-            </ion-item-options>
-          </ion-item-sliding>
-        </ion-list>
-      </ion-col>
+          <ion-card style="background-color:white">
+            <ion-card-header color=tertiary>
+              <ion-card-title  class="ion-text-center">Usuarios registrados</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <div  class="ion-margin-vertical ion-text-right">
+                  <ion-button class="item-end" id="btn-confirm" [routerLink]="['/admin-page/tabRegistrarAdministrador']">
+                    <ion-icon slot="start" name="add"></ion-icon>Agregar Administrador
+                  </ion-button>
+              </div>
+              <ion-item-divider>
+              </ion-item-divider>
+              <ion-list>
+                <ion-item *ngFor="let usuario of usuarios" >
+                  <ion-avatar style="padding-right: 7px;">
+                    <ion-img [src]="usuario.imagenPerfil"></ion-img>
+                  </ion-avatar>
+                  <ion-label>
+                    <h5>{{usuario.nickname}}</h5>
+                    <p>{{usuario.email}}</p>
+                  </ion-label>
+                  <ion-button [hidden]="usuario.bloqueado" color="danger" (click)="onBloquearUsuario(usuario.idPersona)">
+                    <ion-icon name="lock-closed-sharp" slot="icon-only"></ion-icon>
+                  </ion-button>
+                  <ion-button [hidden]="!usuario.bloqueado" color="green" (click)="onDesbloquearUsuario(usuario.idPersona)">
+                    <ion-icon name="lock-open-sharp" slot="icon-only"></ion-icon>
+                  </ion-button>
+                </ion-item>
+              </ion-list>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
