--- a/src/app/UI/feed-home/feed-home.component.html
+++ b/src/app/UI/feed-home/feed-home.component.html
@@ -52,7 +52,7 @@
 <ion-card>
   <ion-card-content style="background-color: white;" *ngIf="publicaciones?.length == 0">
     <img style="height: 15rem; margin-left: auto;margin-right: auto; display: block;" src="../../assets/img/lobito.png">
-    <ion-label style="text-align: center; display: block;">Nada interesante por aqui</ion-label>
+    <ion-label style="text-align: center; display: block;">Aún no hay publicaciones :(</ion-label>
   </ion-card-content>
 </ion-card>
 <ion-infinite-scroll threshold="15%" (ionInfinite)="loadData($event)">
