arreglo intereses, añado boton falta estilos

--- a/src/app/UI/navbar/navbar.component.html
+++ b/src/app/UI/navbar/navbar.component.html
@@ -51,7 +51,7 @@
             <img [src]="usuario.imagenPerfil">
           </ion-avatar>
         </div>
-        {{ usuario.nickname }}
+        {{ usuario.nombre }} 
       </ion-item>
     </ion-list>
   </ion-toolbar>
