--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -47,6 +47,12 @@
     position: absolute;
   }
 
+  .deleteAccount-button{
+    margin-top: 15%;
+    width: 100%;
+    margin-left: -30%;
+  }
+
   .mis-ubicaciones-button{        
     margin-top: 15%;
   }
