--- a/src/app/intereses-usuario-comun/intereses-usuario-comun.page.html
+++ b/src/app/intereses-usuario-comun/intereses-usuario-comun.page.html
@@ -9,12 +9,12 @@
           </ion-card-header>
           <ion-card-content>
             <ion-list>
-              <ion-item *ngFor="let inte of intereses" class="ion-no-padding">
+              <ion-item *ngFor="let inte of intereses | async" class="ion-no-padding">
                 <ion-label> {{ inte.interes }} </ion-label>
-                <ion-button (click)="onSubscribirse(inte.idInteres, inte)" *ngIf="!check(inte)">
+                <ion-button (click)="onSubscribirse(inte.idInteres, inte)" *ngIf="!inte.estaSuscripto">
                   <ion-icon name="heart-outline" slot="icon-only" ></ion-icon>
                 </ion-button>
-                <ion-button (click)="onDesSubscribirse(inte.idInteres, inte)" color= "danger" *ngIf="check(inte)">
+                <ion-button (click)="onDesSubscribirse(inte.idInteres, inte)" color= "danger" *ngIf="inte.estaSuscripto">
                   <ion-icon name="heart-dislike-outline" slot="icon-only" ></ion-icon>
                 </ion-button>
               </ion-item>
